--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
   <html>
-    <head>
-      <title>
-        Kylie's Web Page
-      <title>
-     </head>
+      <head>
+          <title>
+              Kylie's First Web Page
+          <title>
+      </head>
      
      <body>
-        Helloooooooo World!
-      </body>
+         Helloooooooo World!
+     </body>
    </html>
