--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <nav>
         <ul>    
             <li><a href="https://www.behance.net"> My Work</a></li>
-            <li> <a href="https://www.linkedin.com/in/kylie-wong-8508481a9/">LinkedIn</a></li>
+            <li> <a href="www.linkedin.com/in/grckyliewong/">LinkedIn</a></li>
             <li><a href="mailto:kwong203@calpoly.edu"> Email Me</a></li>
         </ul>
     </nav>
