--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img id="logo" src="images-copy/logo.gthroughps.png" 
              alt="Kylie Wong's LOGO"> 
         <h1>Hi and welcome! 
-            <br>You've made it to my contact page  </h1>
+            <br>You've made it to my contact page :)  </h1>
         <br>
         <h2>&ldquo; Let's chat!&rdquo; - Kylie Wong</h2>    
        
@@ -28,8 +28,8 @@
 
     <nav>
         <ul>    
-            <li><a href="https://www.behance.net"> My Work</a></li>
-            <li> <a href="www.linkedin.com/in/grckyliewong">LinkedIn</a></li>
+            <li><a href=https://www.behance.net/kyliewong> My Work</a></li>
+            <li> <a href=www.linkedin.com/in/grckyliewong>LinkedIn</a></li>
             <li><a href="mailto:kwong203@calpoly.edu"> Email Me</a></li>
         </ul>
     </nav>
