--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 <body>
 
     <div class="center">
-        <img id="logo" src="images-copy/logo.gthroughps.png" 
-             alt="Kylie Wong's LOGO"> 
+        <img id="logo" src="images-copy/kwfinallogo@2x.png" 
+             alt="Kylie Wong's LOGO"
+             
+             /> 
         <h1>Hi and welcome! 
             <br>You've made it to my contact page :)  </h1>
         <br>
@@ -29,7 +31,7 @@
     <nav>
         <ul>    
             <li><a href=https://www.behance.net/kyliewong> My Work</a></li>
-            <li> <a href=https://www.linkedin.com/in/grckyliewong>LinkedIn</a></li>
+            <li> <a href=www.linkedin.com/in/grckyliewong>LinkedIn</a></li>
             <li><a href="mailto:kwong203@calpoly.edu"> Email Me</a></li>
         </ul>
     </nav>
