Loss-less image!

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 <body>
 
     <div class="center">
-        <img id="logo" src="images-copy/kwfinallogo@2x.png" 
+        <img id="logo" src="images-copy/finallogokw@2x.png" 
              alt="Kylie Wong's LOGO"
-             
              /> 
         <h1>Hi and welcome! 
             <br>You've made it to my contact page :)  </h1>
