update to linkedin

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <nav>
         <ul>    
             <li><a href=https://www.behance.net/kyliewong> My Work</a></li>
-            <li> <a href=www.linkedin.com/in/grckyliewong>LinkedIn</a></li>
+            <li> <a href=https://www.linkedin.com/in/grckyliewong/</a></li>
             <li><a href="mailto:kwong203@calpoly.edu"> Email Me</a></li>
         </ul>
     </nav>
